src/features/Reviewer/components/styles.module.css
.reviewer {
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: space-between;
	flex-direction: column;
	position: relative;
	background-color: var(--default-background-color);
}

.container {
	padding: var(--xxl-padding);
	text-align: center;
	width: 100%;
	margin: 0 auto;
	display: flex;
	gap: 1rem;
	flex-direction: column;
	height: 100%;

	& ol,
	& ul {
		margin: 0 2.4rem;
	}

	& hr {
		border-radius: var(--default-border-radius);
		border-color: var(--hover-border-color);
	}
}

.bottom-bar {
	background-color: var(--default-background-color);
	padding: var(--default-padding) var(--large-padding);
	padding-top: 0;
	display: grid;
	grid-template-columns: 1fr 2fr 1fr;
	align-items: end;
	border-top: 1px solid var(--border-color);

	& * {
		font-size: 1.2rem;
	}

	& button {
		padding: var(--default-padding) var(--large-padding);
		box-shadow: var(--default-box-shadow);
	}

	& .button-column {
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		gap: 4px;

		& .count-row {
			display: flex;
			gap: 0.4rem;
		}

		& .underline {
			text-decoration: underline;
		}

		& .again-button {
			background-color: var(--red-color);
			color: #fff;
		}
		& .hard-button {
			background-color: #ff7d29;
			color: #fff;
		}
		& .good-button {
			background-color: green;
			color: #fff;
		}
		& .easy-button {
			background-color: var(--link-color);
			color: #fff;
		}
	}

	& .button-row {
		display: flex;
		justify-content: center;
		align-items: center;
		gap: 1.2rem;
	}

	& .edit-button-container {
		display: block;

		& button {
			box-shadow: none;
			gap: var(--default-padding);
		}
	}

	& .timer-container {
		display: flex;
		align-items: end;
		justify-content: end;

		& * {
			font-size: 1.4rem;
		}

		& div {
			gap: var(--default-padding);
		}
	}
}

@media (max-width: 58rem) {
	.bottom-bar {
		display: flex;
		justify-content: center;

		& .edit-button-container {
			display: none;
		}

		& .timer-container {
			display: none;
		}
	}
}

